# file-hauler

./: .gitignore  CMakeLists.txt  README.md
cmake/: Helpers.cmake  exports.h.in  version.rc.in
modules/: version.hpp
software/file_hauler/: CMakeLists.txt
software/file_hauler/src/: Hauler.cpp  Hauler.h  Result.cpp  Result.h  Syncer.cpp  Syncer.h  Timer.cpp  Timer.h  main.cpp  operators.h  util.h
src/file-syncer/: Result.cpp  Result.h  Syncer.cpp  Syncer.h  Timer.cpp  Timer.h  main.cpp  operators.h  util.h
